@@ -60,6 +60,7 @@
 
 #include "xpm/gamespy3d.xpm"
 #include "xpm/ssam.xpm"
+#include "xpm/mohaa.xpm"
 
 #include "xpm/green-plus.xpm"
 #include "xpm/red-minus.xpm"
@@ -96,8 +97,6 @@ struct pixmap connect_pix;
 struct pixmap observe_pix;
 struct pixmap record_pix;
 
-// Workaround for ppc compiler bug
-// which does not initialize arrays with 0
 struct pixmap filter_pix[2];
 struct pixmap filter_cfg_pix[2];
 
@@ -124,6 +123,7 @@ struct pixmap rune_pix;
 struct pixmap descent3_pix;
 struct pixmap gamespy3d_pix;
 struct pixmap ssam_pix;
+struct pixmap mohaa_pix;
 
 struct pixmap gplus_pix;
 struct pixmap rminus_pix;
@@ -234,6 +234,7 @@ void free_pixmaps (void) {
   free_pixmap (&descent3_pix);
   free_pixmap (&gamespy3d_pix);
   free_pixmap (&ssam_pix);
+  free_pixmap (&mohaa_pix);
 
   free_pixmap (&gplus_pix);
   free_pixmap (&rminus_pix);
@@ -314,6 +315,7 @@ void init_pixmaps (GtkWidget *window) {
   create_pixmap (window, &descent3_pix, descent3_xpm);
   create_pixmap (window, &gamespy3d_pix, gamespy3d_xpm);
   create_pixmap (window, &ssam_pix, ssam_xpm);
+  create_pixmap (window, &mohaa_pix, mohaa_xpm);
 
   create_pixmap (window, &gplus_pix, green_plus_xpm);
   create_pixmap (window, &rminus_pix, red_minus_xpm);
