@@ -6,3 +6,12 @@ gametype SMS new extend GPS
    template var = SERIOUSSAM
    game rule = gametype
 end
+# Config for Medal of Honor: Allied Assault MHS
+gametype MHS new extend Q3S
+   name = Medal of Honor: Allied Assault
+   default port = 12204
+   template var = MOHALLIEDASSAULT
+   game rule = gametype
+   status packet = \377\377\377\377\002getinfo xxx
+   status2 packet = \377\377\377\377\002getstatus xxx
+end
