@@ -116,6 +116,7 @@ enum server_type {
   DESCENT3_SERVER,
   SSAM_SERVER,
   SSAMSE_SERVER,
+  MOHAA_SERVER,
   GPS_SERVER,
   UNKNOWN_SERVER
 };
